[package]
name = "bsn1"
version = "0.4.1"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "LGPL-3.0-or-later OR Apache-2.0 OR BSD-2-Clause"
description = "Rust BER and DER serializer/deserializer."
documentation = "https://wbcchsyn.github.io/rust-bsn1/bsn1/"
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]


[dependencies]
num = "0.4.0"
