[package]
name = "bsn1"
version = "1.0.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "LGPL-3.0-or-later OR Apache-2.0"
description = "Rust BER and DER serializer/deserializer."
documentation = "https://docs.rs/bsn1/1.0.0/bsn1/"
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]


[workspace]
members = ["bsn1_serde", "bsn1_serde_macros"]

[dependencies]
num = "0.4.0"
