[package]
name = "bsn1"
version = "2.0.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL-3.0-only"
description = "Rust BER and DER serializer/deserializer."
documentation = "https://docs.rs/bsn1/latest/bsn1/"
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]

[dependencies]
num = "0.4.1"
