[package]
name = "bsn1_serde"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "LGPL-3.0-or-later OR Apache-2.0"
description = "Provides derive macros for bsn1."
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]

[dependencies]
bsn1 = { path = ".." }
