[package]
name = "bsn1_serde"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL-3.0-only"
description = "Provides derive macros for bsn1."
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
bsn1 = "2.0.0"
bsn1_serde_macros = "0.1.0"

[dev-dependencies]
trybuild = "1.0.85"
