[package]
name = "bsn1_serde"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL-3.0-only"
description = "Provides derive macros for bsn1."
documentation = "https://docs.rs/bsn1_serde/latest/bsn1_serde/"
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
bsn1 = { path = "../bsn1" }
bsn1_serde_macros = { path = "../bsn1_serde_macros" }
anyhow = "1.0.81"

[dev-dependencies]
trybuild = "1.0.85"
