[package]
name = "bsn1_serde_macros"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL-3.0-only"
description = "Implements derive macros for bsn1_serde."
readme = "README.md"
repository = "https://github.com/wbcchsyn/rust-bsn1.git"
keywords = ["ASN1", "DER", "BER", "serialize", "X690"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.72"
quote = "1.0.33"
syn = "2.0.43"

[dev-dependencies]
bsn1_serde = { path = "../bsn1_serde" }
